--- a/app/templates/rentals.hbs
+++ b/app/templates/rentals.hbs
@@ -7,22 +7,6 @@
   {{/link-to}}
 </div>
 
-{{#each model as |rental|}}
-  <article class="listing">
-    <div class="details">
-      <h3>{{rental.title}}</h3>
-      <div class="detail owner">
-        <span>Owner:</span> {{rental.owner}}
-      </div>
-      <div class="detail type">
-        <span>Type:</span> {{rental.category}}
-      </div>
-      <div class="detail location">
-        <span>Location:</span> {{rental.city}}
-      </div>
-      <div class="detail bedrooms">
-        <span>Number of bedrooms:</span> {{rental.bedrooms}}
-      </div>
-    </div>
-  </article>
+{{#each model as |rentalUnit|}}
+  {{rental-listing rental=rentalUnit}}
 {{/each}}
