--- a/app/templates/components/rental-listing.hbs
+++ b/app/templates/components/rental-listing.hbs
@@ -1,5 +1,11 @@
 <article class="listing">
-  <img src={{rental.image}} alt="">
+  <a
+    onclick={{action "toggleImageSize"}}
+    class="image {{if isWide 'wide'}}"
+    role="button">
+    <img src={{rental.image}} alt="">
+    <small>View Larger</small>
+  </a>
   <div class="details">
     <h3>{{rental.title}}</h3>
     <div class="detail owner">
