--- a/app/templates/components/rental-listing.hbs
+++ b/app/templates/components/rental-listing.hbs
@@ -1,24 +1,21 @@
 <article class="listing">
-  <a
-    onclick={{action "toggleImageSize"}}
-    class="image {{if isWide 'wide'}}"
-    role="button">
+  <a onclick={{action "toggleImageSize"}} class="image {{if isWide "wide"}}" role="button">
     <img src={{rental.image}} alt="">
     <small>View Larger</small>
   </a>
-  <div class="details">
-    <h3>{{rental.title}}</h3>
-    <div class="detail owner">
-      <span>Owner:</span> {{rental.owner}}
-    </div>
-    <div class="detail type">
-      <span>Type:</span> {{rental.category}}
-    </div>
-    <div class="detail location">
-      <span>Location:</span> {{rental.city}}
-    </div>
-    <div class="detail bedrooms">
-      <span>Number of bedrooms:</span> {{rental.bedrooms}}
-    </div>
+<div class="details">
+  <h3>{{rental.title}}</h3>
+  <div class="detail owner">
+    <span>Owner:</span> {{rental.owner}}
   </div>
+  <div class="detail type">
+    <span>Type:</span> {{rental.category}}
+  </div>
+  <div class="detail location">
+    <span>Location:</span> {{rental.city}}
+  </div>
+  <div class="detail bedrooms">
+    <span>Number of bedrooms:</span> {{rental.bedrooms}}
+  </div>
+</div>
 </article>
