--- a/app/templates/components/list-filter.hbs
+++ b/app/templates/components/list-filter.hbs
@@ -1,1 +1,7 @@
-{{yield}}
+{{input
+  value=value
+  key-up=(action "handleFilterEntry")
+  class="light"
+  placeholder="Filter By City"
+}}
+{{yield results}}
