--- a/app/templates/rentals.hbs
+++ b/app/templates/rentals.hbs
@@ -7,6 +7,15 @@
   {{/link-to}}
 </div>
 
-{{#each model as |rentalUnit|}}
-  {{rental-listing rental=rentalUnit}}
-{{/each}}
+{{#list-filter
+  filter=(action "filterByCity")
+  as |filteredResults|
+  }}
+  <ul class="results">
+    {{#each filteredResults as |rentalUnit|}}
+      <li>{{rental-listing rental=rentalUnit}}</li>
+    {{/each}}
+  </ul>
+{{/list-filter}}
+
+{{outlet}}
