--- a/app/templates/rentals/show.hbs
+++ b/app/templates/rentals/show.hbs
@@ -1,1 +1,25 @@
-{{outlet}}
+<div class="jumbo show-listing">
+  <h2 class="title">{{model.title}}</h2>
+  <div class="content">
+    <div>
+      <img src={{model.image}} class="rental-pic" alt="Picture of {{model.title}}">
+    </div>
+    <div class="detail-section">
+      <div class="detail owner">
+        <strong>Owner:</strong> {{model.owner}}
+      </div>
+      <div class="detail">
+        <strong>Type:</strong> {{rental-property-type model.category}} - {{model.category}}
+      </div>
+      <div class="detail">
+        <strong>Location:</strong> {{model.city}}
+      </div>
+      <div class="detail">
+        <strong>Number of bedrooms:</strong> {{model.bedrooms}}
+      </div>
+      <div class="description">
+        <p>{{model.description}}</p>
+      </div>
+    </div>
+  </div>
+</div>
